# ec

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  system_tests.py
.github/workflows/: rust.yml
alfs/: test1.alf
src/: ec.rs  ec_main.rs  fconv.rs  fconv_main.rs  main.rs  mem.rs  memory.rs
src/alf/: data_triple.rs  mod.rs  record.rs
src/args/: mod.rs
src/ec/: mod.rs
src/ec/alf/: data_triple.rs  mod.rs  record.rs
src/ec/cpu/: fconv.rs  instruction.rs  mod.rs  opcode.rs
src/ec/mem/: mod.rs
src/ec/sv/: mod.rs
test_files/alf/: character_alu_ops.alf  character_io.alf  exit.alf  high_codes_register_register_ops.alf  immediate_arithmetic_logical_operations.alf  int_arithmetics.alf  int_register_arithmetics.alf  logical_operators.alf  logical_register_operators.alf  read_add_print_two_ints.alf  read_int_word.alf  register_load_and_comparison.alf  register_register_storage.alf  reverse_and_reminder_ops.alf  svc_write_int_read_int_word.alf  swap_min_max.alf  while_non_zero.alf
