[package]
name = "ec"
version = "0.1.0"
authors = ["Łukasz Hryniuk <code@hryniuk.pl>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
byteorder = "1"
getopts = "*"
log = "*"
num-derive = "*"
num-traits = "*"
text_io = "*"
simplelog = "^0.5.0"
approx = "^0.3.2"

[[bin]]
name = "ec"
path = "src/ec_main.rs"

[[bin]]
name = "fconv"
path = "src/fconv_main.rs"
